--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>The Spaceman</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="shortcut icon" href="TemplateData/favicon.ico" />
+    <link rel="stylesheet" href="TemplateData/style.css" />
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/WebGL.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate(
+        "unityContainer",
+        "Build/WebGL.json",
+        { onProgress: UnityProgress }
+      );
     </script>
   </head>
   <body>
@@ -22,21 +29,46 @@
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
         <div class="title">The Spaceman</div>
       </div> -->
+      <div id="ton-connect"></div>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
     <script>
-        // Init TWA
-        Telegram.WebApp.ready();
+      // Init TWA
+      Telegram.WebApp.ready();
 
-        // Show main button
-        Telegram.WebApp.MainButton.setParams({
-            text: 'Main Button'
-        });
-        Telegram.WebApp.MainButton.onClick(function () {
-            Telegram.WebApp.showAlert('Main Button was clicked')
-        });	
-        Telegram.WebApp.MainButton.show();
+      // Show main button
+      Telegram.WebApp.MainButton.setParams({
+        text: "Main Button",
+      });
+      Telegram.WebApp.MainButton.onClick(function () {
+        Telegram.WebApp.showAlert("Main Button was clicked");
+      });
+      Telegram.WebApp.MainButton.show();
+    </script>
+    <script>
+      const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
+        manifestUrl:
+          "https://trungdlp-wolffun.github.io/telegram-mini-app-test/tonconnect-manifest.json",
+        buttonRootId: "ton-connect",
+      });
+
+      tonConnectUI.uiOptions = {
+        twaReturnUrl: "https://t.me/thetan_test_ton_bot",
+      };
+    </script>
+    <script>
+      async function connectToWallet() {
+        const connectedWallet = await tonConnectUI.connectWallet();
+        // Do something with connectedWallet if needed
+        console.log(connectedWallet);
+      }
+
+      // Call the function
+      connectToWallet().catch((error) => {
+        console.error("Error connecting to wallet:", error);
+      });
     </script>
   </body>
 </html>
